--- a/erm/index.html
+++ b/erm/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Portfolio</title>
+    <title>uint23.xyz</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <meta charset="UTF-8">
@@ -51,41 +51,16 @@
         <main>
             <section id="about">
                 <h2>About Me</h2>
-                <p>Welcome to my portfolio. I’m a 16 year old programmer.</p>
+                <p>Welcome to my portfolio. I’m a 16 year old programmer who enjoys programming efficient, minimalist software for Linux</p>
             </section>
 
             <section id="skills">
                 <h2>Skills</h2>
                 <div class="skills-container">
-                    <div class="skills-group">
-                        <h3>Web Development</h3>
-                        <ul class="skill-list">
-                            <li>
-                                <i class="fa-brands fa-html5 skill-icon"></i>
-                                <span>HTML</span>
-                            </li>
-                            <li>
-                                <i class="fa-brands fa-css3-alt skill-icon"></i>
-                                <span>CSS</span>
-                            </li>
-                            <li>
-                                <i class="fa-brands fa-js skill-icon"></i>
-                                <span>JavaScript</span>
-                            </li>
-                            <li>
-                                <i class="fa-brands fa-react skill-icon"></i>
-                                <span>React Native</span>
-                            </li>
-                        </ul>
-                    </div>
                     
                     <div class="skills-group">
                         <h3>Programming Languages</h3>
                         <ul class="skill-list">
-                            <li>
-                                <i class="fa-brands fa-python skill-icon"></i>
-                                <span>Python</span>
-                            </li>
                             <li>
                                 <i class="fa-solid fa-code skill-icon"></i>
                                 <span>C</span>
@@ -95,8 +70,8 @@
                                 <span>C++</span>
                             </li>
                             <li>
-                                <i class="fa-brands fa-rust skill-icon"></i>
-                                <span>Rust :(</span>
+                                <i class="fa-brands fa-python skill-icon"></i>
+                                <span>Python</span>
                             </li>
                         </ul>
                     </div>
@@ -139,7 +114,7 @@
                 <h2>Projects</h2>
                 <ul>
                     <li><a href="https://uint23.xyz/">Portfolio Website</a></li>
-                    <li><a href="https://github.com/uint23/xlibwm">X11 Tiling Window Manager (Name Undecided)</a></li>
+                    <li><a href="https://github.com/uint23/sxwm">sxwm: an easy and simple tiling window manager</a></li>
                 </ul>
             </section>
 
